# api-recommender

./: Makefile  README.md
backend/: .gitignore  README.md  pyproject.toml
backend/recommender/: app.py
backend/recommender/controllers/: __init__.py  api.py  dataset.py  model.py  recommendation.py
backend/recommender/extractor/: extract.py
backend/recommender/model/: base_model.py  endpoint.py  fast_text.py  metadata.py  word2vec.py
backend/recommender/persistence/: api.py  metadata.py
backend/recommender/processer/: transform.py
backend/recommender/recommender/: __init__.py  base_model.py  fast_text.py  word2vec.py
backend/recommender/recommender/utils/: __init__.py  evaluation.py  recall_logger.py
backend/recommender/routes/: apis.py  dataset.py  models.py  recommendations.py
frontend/: README.md  angular.json  package-lock.json  package.json
frontend/src/: index.html  styles.sass
frontend/src/app/: app.component.html  app.component.sass  app.module.ts
frontend/src/app/components/dataset-update-button/: dataset-update-button.component.html  dataset-update-button.component.spec.ts  dataset-update-button.component.ts
frontend/src/app/configuration/: constants.ts
frontend/src/app/models/: metadata.ts  model.ts  recommendations.ts
frontend/src/app/pages/recommendations/: recommendations.component.html  recommendations.component.sass  recommendations.component.spec.ts  recommendations.component.ts
frontend/src/app/pages/recommendations/components/model-selector/: model-selector.component.html  model-selector.component.sass  model-selector.component.spec.ts  model-selector.component.ts
frontend/src/app/services/: api-service.ts  model-service.ts  recommendation-service.ts
frontend/src/app/utils/: props.ts
(+3 files in other folders)
