[tool.poetry]
name = "api-recommender"
version = "0.1.0"
description = ""
authors = ["Ana Martínez Saucedo <anmartinez@uade.edu.ar>"]
readme = "README.md"
packages = [{include = "recommender"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
numpy = "^1.25.1"
gensim = "^4.3.1"
ray = "^2.5.1"
ruamel-yaml = "^0.17.32"
spacy = "^3.6.0"
nltk = "^3.8.1"
pandas = "^2.0.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
