[tool.poetry]
name = "api-recommender"
version = "0.1.0"
description = ""
authors = ["Ana Martínez Saucedo <anmartinez@uade.edu.ar>"]
readme = "README.md"
packages = [{include = "recommender"}]

[tool.poetry.dependencies]
python = "^3.9"
flask = "^2.3.2"
numpy = "^1.25.1"
gensim = "^4.3.1"
ray = {extras = ["tune"], version = "^2.7.1"}
ruamel-yaml = "^0.17.32"
spacy = "^3.5.0"
nltk = "^3.8.1"
pandas = "^2.0.3"
flask-cors = "^4.0.0"
python-dotenv = "^1.0.0"
flask-mongoengine =  {git = "https://github.com/idoshr/flask-mongoengine", branch = "1.0.1"}
en-core-web-sm = {url = "https://github.com/explosion/spacy-models/releases/download/en_core_web_sm-3.7.0/en_core_web_sm-3.7.0.tar.gz"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
